# pi-pico2-linux

./: .gitignore  Config.in  Dockerfile  README.md  external.desc  external.mk
board/raspberrypi/raspberrypi-pico2/: busybox.config  genimage.cfg  post-build.sh  post-image.sh  raspberrypi-pico2.config  raspberrypi-pico2.dts  raspberrypi-pico2_defconfig
board/raspberrypi/raspberrypi-pico2/patches/linux/: 0001-Add-interrupt-controller.patch  0001-Select-ARM_AMBA.patch  0001-starts-to-work.patch  0001-timer.patch  0002-emulate-attomics.patch  0002-patch-interrupt-controller.patch  0003-replace-sc-and-lr-attomics-with-sw-and-lw-as-they-ha.patch  0004-timer.patch  0005-Add-interrupt-controller.patch  0006-patch-interrupt-controller.patch
board/raspberrypi/raspberrypi-pico2/rootfs_overlay/etc/: inittab
configs/: raspberrypi-pico2_defconfig
package/: Config.in
package/libusb/: Config.in.host
package/newlib/: Config.in  newlib.mk
package/pico-sdk2/: Config.in  Config.in.host  pico-sdk2.hash  pico-sdk2.mk
package/pico2-bootloader/: Config.in  pico2-bootloader.mk
package/pico2-bootloader/bootloader/: CMakeLists.txt  Makefile
package/pico2-bootloader/bootloader/demo/src/: demo.c  demo.lds
package/pico2-bootloader/bootloader/src/: byteswap.h  clocks.h  ctype_local.h  gpio.h  helpers.h  image.c  image.h  main.c  pads.h  power.h  printf_config.h  qmi.c  qmi.h  resets.h  rp2350-crt.S  rp2350-hdr.S  rp2350-map.h  rp2350.lds  stdio_local.h  string.c  string_local.h  ticks.h  uart.c  uart.h
package/pico2-bootloader/bootloader/src/linux/: csr.h  extra.h  irqflags.h
package/picotool2/: Config.in  Config.in.host  picotool2.hash  picotool2.mk
package/psram-bootloader/: Config.in  psram-bootloader.mk
psram-bootloader/: CMakeLists.txt  Makefile  debug.gdb  partition_table.json  run-gdb.sh
psram-bootloader/demo/: Makefile
psram-bootloader/demo/src/: start.S
psram-bootloader/src/: bootloader.c
